Modification html et css

--- a/index.html
+++ b/index.html
@@ -76,30 +76,22 @@
       <!-- Hébergements marseille + plus populaire -->
 
       <section class="second_section" id="lodging">
-        <div class="bloc1">
-          <div class="title_bloc1">
+        <div class="bloc_lodging">
+          <div class="title_lodging">
             <h3>Hébergements à Marseille</h3>
           </div>
-          <div class="card_container">
-            <div class="card">
-              <div class="card_image">
-                <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière">
-              </div>
-              <div class="card_info">
-                <h3>Auberge La Cannebière</h3>
-                <p>Nuit à partir de <b>25€</b></p>
-                <div class="lodging_star">
-                  <i class="fa-solid fa-star star_blue"></i>
-                  <i class="fa-solid fa-star star_blue"></i>
-                  <i class="fa-solid fa-star star_blue"></i>
-                  <i class="fa-solid fa-star star_blue"></i>
-                  <i class="fa-solid fa-star star_gray"></i>
-                </div>
-              </div>
-              <a href="#" class="card_link"></a>
-            </div>
+        </div>
+
+        <!-- Bloc "Plus populaire" -->
+        <div class="bloc_famous">
+          <div class="title_famous">
+            <h3>Les plus populaires</h3>
+          </div>
+          <div class="icon_famous">
+            <i class="fa-solid fa-star"></i>
           </div>
         </div>
+
       </section>
     </main>
 
