Ajout card template html + css

--- a/index.html
+++ b/index.html
@@ -73,24 +73,36 @@
         </div>
       </section>
 
-      <!-- Hébergements marseille + plus populaire -->
+      <!-- Bloc "Hébergements marseille" -->
 
       <section class="second_section" id="lodging">
         <div class="bloc_lodging">
           <div class="title_lodging">
             <h3>Hébergements à Marseille</h3>
           </div>
+          <div class="lcard_list">
+            <div class="lcard">
+              <a href="#">
+                <div class="lcard_img">
+                  <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière">
+                </div>
+                <div class="lcard_content">
+                  <h3>Auberge La Cannebière</h3>
+                  <p>Nuit à partir de <b>25€</b></p>
+                  <div class="lcard_rating">
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star grey_star"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
 
         <!-- Bloc "Plus populaire" -->
-        <div class="bloc_famous">
-          <div class="title_famous">
-            <h3>Les plus populaires</h3>
-          </div>
-          <div class="icon_famous">
-            <i class="fa-solid fa-star"></i>
-          </div>
-        </div>
 
       </section>
     </main>
