Intégration de toutes les cards

--- a/index.html
+++ b/index.html
@@ -99,6 +99,99 @@
                 </div>
               </a>
             </div>
+            <div class="lcard">
+              <a href="#">
+                <div class="lcard_img">
+                  <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
+                </div>
+                <div class="lcard_content">
+                  <h3>Hôtel du port</h3>
+                  <p>Nuit à partir de 52<b>€</b></p>
+                  <div class="lcard_rating">
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="lcard">
+              <a href="#">
+                <div class="lcard_img">
+                  <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
+                </div>
+                <div class="lcard_content">
+                  <h3>Hôtel Les mouettes</h3>
+                  <p>Nuit à partir de 76<b>€</b></p>
+                  <div class="lcard_rating">
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star grey_star"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="lcard">
+              <a href="#">
+                <div class="lcard_img">
+                  <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+                </div>
+                <div class="lcard_content">
+                  <h3>Hôtel de la mer</h3>
+                  <p>Nuit à partir de 46<b>€</b></p>
+                  <div class="lcard_rating">
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star grey_star"></i>
+                    <i class="fa-solid fa-star grey_star"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="lcard">
+              <a href="#">
+                <div class="lcard_img">
+                  <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
+                </div>
+                <div class="lcard_content">
+                  <h3>Auberge Le Panier</h3>
+                  <p>Nuit à partir de <b>23€</b></p>
+                  <div class="lcard_rating">
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star grey_star"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="lcard">
+              <a href="#">
+                <div class="lcard_img">
+                  <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
+                </div>
+                <div class="lcard_content">
+                  <h3>Hôtel chez Amina</h3>
+                  <p>Nuit à partir de 96<b>€</b></p>
+                  <div class="lcard_rating">
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="more_content">
+            <a href="#">Afficher plus</a>
           </div>
         </div>
 
