--- a/index.html
+++ b/index.html
@@ -197,6 +197,33 @@
 
         <!-- Bloc "Plus populaire" -->
 
+        <div class="bloc_famous">
+          <div class="top_famous">
+            <h3>Les plus populaires</h3>
+            <i class="fa-solid fa-star"></i>
+          </div>
+          <div class="fcard_list">
+            <div class="fcard">
+              <a href="#">
+                <div class="fcard_img">
+                  <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
+                </div>
+                <div class="fcard_content">
+                  <h3>Hôtel le soleil du matin</h3>
+                  <p>Nuit à partir de 128<b>€</b></p>
+                  <div class="fcard_rating">
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+
       </section>
     </main>
 
