--- a/index.html
+++ b/index.html
@@ -222,8 +222,47 @@
               </a>
             </div>
           </div>
+          <div class="fcard_list">
+            <div class="fcard">
+              <a href="#">
+                <div class="fcard_img">
+                  <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeurde l'eau Chambre d'hôtes">
+                </div>
+                <div class="fcard_content">
+                  <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                  <p>Nuit à partir de 71<b>€</b></p>
+                  <div class="fcard_rating">
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star grey_star"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="fcard_list">
+            <div class="fcard">
+              <a href="#">
+                <div class="fcard_img">
+                  <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc">
+                </div>
+                <div class="fcard_content">
+                  <h3>Hôtel Tout bleu et Blanc</h3>
+                  <p>Nuit à partir de 68<b>€</b></p>
+                  <div class="fcard_rating">
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star blue_star"></i>
+                    <i class="fa-solid fa-star grey_star"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
-
       </section>
     </main>
 
