--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
             <div class="fcard">
               <a href="#">
                 <div class="fcard_img">
-                  <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeurde l'eau Chambre d'hôtes">
+                  <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au cœur de l'eau Chambre d'hôtes">
                 </div>
                 <div class="fcard_content">
-                  <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                  <h3>Au cœur de l'eau Chambres d'hôtes</h3>
                   <p>Nuit à partir de 71<b>€</b></p>
                   <div class="fcard_rating">
                     <i class="fa-solid fa-star blue_star"></i>
