--- a/index.html
+++ b/index.html
@@ -7,22 +7,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Booki</title>
 
-  <!-- Stylesheet -->
+  <!--
+  * Stylesheet 
+  -->
+
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" media="screen and (max-width: 992px)" href="./css/tablette.css">
   <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
 
-  <!-- Favicon -->
+  <!-- 
+  * Favicon 
+  -->
+
   <link rel="icon" href="./images/logo/favicon.png">
 
-  <!-- GoogleFonts -->
+  <!--
+  * GoogleFonts
+  -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap"
     rel="stylesheet" />
 
-  <!-- Font Awesome -->
+  <!--
+  * Font Awesome 
+  -->
+
   <script src="https://kit.fontawesome.com/8b89d4b456.js" crossorigin="anonymous"></script>
 
 </head>
@@ -36,7 +48,9 @@
     </nav>
   </header>
 
-  <!-- Titre + Barre de recherche + Filtres -->
+  <!--
+    * Code HTML Titre + Barre de recherche + Filtres 
+  -->
 
   <main>
     <section class="first_section">
@@ -77,7 +91,9 @@
       </div>
     </section>
 
-    <!-- Bloc "Hébergements marseille" -->
+    <!--
+    * Code HTML du bloc: "Hébergements marseille"
+     -->
 
     <section class="second_section" id="lodging">
       <div class="bloc_lodging">
@@ -201,7 +217,9 @@
         </div>
       </div>
 
-      <!-- Bloc "Plus populaire" -->
+      <!--
+      * Code HTML du bloc: "Plus populaire"
+      -->
 
       <div class="bloc_famous">
         <div class="top_famous">
@@ -271,7 +289,9 @@
     </section>
   </main>
 
-  <!-- Mise en place du Footer -->
+  <!-- 
+  * Code HTML du Footer
+   -->
 
   <footer class="footer_box">
     <div class="footer_list">
