--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <a href="./index.html"><img id="logo" src="./images/logo/Booki@3x.png" alt="Logo Booki"></a>
     <nav>
       <a href="#lodging">Hébergements</a>
-      <a href="#">Activités</a>
+      <a href="#activity">Activités</a>
     </nav>
   </header>
 
@@ -281,6 +281,42 @@
                   <i class="fa-solid fa-star blue_star"></i>
                   <i class="fa-solid fa-star grey_star"></i>
                 </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 
+    *Code HTML du bloc: "Activités à Marseille"
+     -->
+
+    <section class="third_section" id="activity">
+      <div class="title_activity">
+        <h3>Activités à Marseille</h3>
+      </div>
+      <div class="activity_list">
+        <div class="activity_1">
+          <div class="big_card">
+            <a href="#">
+              <div class="bigacard_img">
+                <img src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
+              </div>
+              <div class="bigacard_content">
+                <h3>Vieux Port</h3>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="activity_2">
+          <div class="medium1_card">
+            <a href="#">
+              <div class="medium1_img">
+                <img src="./images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+              </div>
+              <div class="medium1_content">
+                <h3>Fort de Pomègues</h3>
               </div>
             </a>
           </div>
