--- a/index.html
+++ b/index.html
@@ -320,6 +320,52 @@
               </div>
             </a>
           </div>
+          <div class="small1_card">
+            <a href="#">
+              <div class="small1_img">
+                <img src="./images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
+              </div>
+              <div class="small1_content">
+                <h3>Îles du Frioul</h3>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="activity_3">
+          <div class="big_card">
+            <a href="#">
+              <div class="bigacard_img">
+                <img src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                  alt="Parc National des Calanques">
+              </div>
+              <div class="bigacard_content">
+                <h3>Parc National des Calanques</h3>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="activity_4">
+          <div class="small2_card">
+            <a href="#">
+              <div class="small2_img">
+                <img src="./images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                  alt="Notre-Dame-De-la-Garde">
+              </div>
+              <div class="small2_content">
+                <h3>Notre-Dame-De-la-Garde</h3>
+              </div>
+            </a>
+          </div>
+          <div class="medium2_card">
+            <a href="#">
+              <div class="medium2_img">
+                <img src="./images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
+              </div>
+              <div class="medium2_content">
+                <h3>Parc Longchamp</h3>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
     </section>
