màj commentaires html + css

--- a/index.html
+++ b/index.html
@@ -7,33 +7,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Booki</title>
 
-  <!--
-  * Stylesheet 
-  -->
+  <!--* Stylesheet -->
 
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" media="screen and (max-width: 992px)" href="./css/tablette.css">
   <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
 
-  <!-- 
-  * Favicon 
-  -->
+  <!-- * Favicon -->
 
   <link rel="icon" href="./images/logo/favicon.png">
 
-  <!--
-  * GoogleFonts
-  -->
+  <!--* GoogleFonts-->
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap"
     rel="stylesheet" />
 
-  <!--
-  * Font Awesome 
-  -->
+  <!--* Font Awesome -->
 
   <script src="https://kit.fontawesome.com/8b89d4b456.js" crossorigin="anonymous"></script>
 
@@ -50,9 +42,7 @@
 
   <main>
 
-    <!--
-    * Code HTML Titre + Barre de recherche + Filtres 
-    -->
+    <!--* Code HTML Titre + Barre de recherche + Filtres -->
 
     <section class="first_section">
       <div class="title_first">
@@ -92,9 +82,7 @@
       </div>
     </section>
 
-    <!--
-    * Code HTML du bloc: "Hébergements marseille"
-     -->
+    <!--* Code HTML du bloc: "Hébergements marseille"-->
 
     <section class="second_section" id="lodging">
       <div class="bloc_lodging">
@@ -218,9 +206,7 @@
         </div>
       </div>
 
-      <!--
-      * Code HTML du bloc: "Plus populaire"
-      -->
+      <!--* Code HTML du bloc: "Plus populaire"-->
 
       <div class="bloc_famous">
         <div class="top_famous">
@@ -289,9 +275,7 @@
       </div>
     </section>
 
-    <!-- 
-    *Code HTML du bloc: "Activités à Marseille"
-     -->
+    <!--* Code HTML du bloc: "Activités à Marseille"-->
 
     <section class="third_section" id="activity">
       <div class="title_activity">
@@ -372,9 +356,7 @@
     </section>
   </main>
 
-  <!-- 
-  * Code HTML du Footer
-   -->
+  <!--* Code HTML du Footer -->
 
   <footer class="footer_box">
     <div class="footer_list">
