--- a/index.html
+++ b/index.html
@@ -221,8 +221,10 @@
                   alt="Hôtel Le soleil du matin">
               </div>
               <div class="fcard_content">
-                <h3>Hôtel le soleil du matin</h3>
-                <p>Nuit à partir de 128<b>€</b></p>
+                <div class="top_fcardcontent">
+                  <h3>Hôtel le soleil du matin</h3>
+                  <p>Nuit à partir de 128<b>€</b></p>
+                </div>
                 <div class="fcard_rating">
                   <i class="fa-solid fa-star blue_star"></i>
                   <i class="fa-solid fa-star blue_star"></i>
@@ -240,8 +242,10 @@
                   alt="Au cœur de l'eau Chambre d'hôtes">
               </div>
               <div class="fcard_content">
-                <h3>Au cœur de l'eau Chambres d'hôtes</h3>
-                <p>Nuit à partir de 71<b>€</b></p>
+                <div class="top_fcardcontent">
+                  <h3>Au cœur de l'eau Chambres d'hôtes</h3>
+                  <p>Nuit à partir de 71<b>€</b></p>
+                </div>
                 <div class="fcard_rating">
                   <i class="fa-solid fa-star blue_star"></i>
                   <i class="fa-solid fa-star blue_star"></i>
@@ -259,8 +263,10 @@
                   alt="Hôtel Tout bleu et Blanc">
               </div>
               <div class="fcard_content">
-                <h3>Hôtel Tout bleu et Blanc</h3>
-                <p>Nuit à partir de 68<b>€</b></p>
+                <div class="top_fcardcontent">
+                  <h3>Hôtel Tout bleu et Blanc</h3>
+                  <p>Nuit à partir de 68<b>€</b></p>
+                </div>
                 <div class="fcard_rating">
                   <i class="fa-solid fa-star blue_star"></i>
                   <i class="fa-solid fa-star blue_star"></i>
