--- a/index.html
+++ b/index.html
@@ -340,10 +340,10 @@
             <a href="#">
               <div class="small2_img">
                 <img src="./images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-                  alt="Notre-Dame-De-la-Garde">
+                  alt="Notre-Dame-de-la-Garde">
               </div>
               <div class="small2_content">
-                <h3>Notre-Dame-De-la-Garde</h3>
+                <h3>Notre-Dame-de-la-Garde</h3>
               </div>
             </a>
           </div>
