--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 
   <!--* Stylesheet -->
 
-  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/normalize.css" />
   <link rel="stylesheet" href="./css/style.css" />
-  <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 992px)" href="./css/tablette.css">
-  <link rel="stylesheet" media="screen and (max-width: 767px)" href="./css/mobile.css">
+  <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 992px)" href="./css/tablette.css" />
+  <link rel="stylesheet" media="screen and (max-width: 767px)" href="./css/mobile.css" />
 
   <!-- * Favicon -->
 
-  <link rel="icon" href="./images/logo/favicon.png">
+  <link rel="icon" href="./images/logo/favicon.png" />
 
   <!--* GoogleFonts-->
 
@@ -28,12 +28,11 @@
   <!--* Font Awesome -->
 
   <script src="https://kit.fontawesome.com/8b89d4b456.js" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
   <header>
-    <a href="./index.html"><img id="logo" src="./images/logo/Booki@3x.png" alt="Logo Booki"></a>
+    <a href="./index.html"><img id="logo" src="./images/logo/Booki@3x.png" alt="Logo Booki" /></a>
     <nav>
       <a href="#lodging">Hébergements</a>
       <a href="#activity">Activités</a>
@@ -41,7 +40,6 @@
   </header>
 
   <main>
-
     <!--* Code HTML Titre + Barre de recherche + Filtres -->
 
     <section class="first_section">
@@ -51,27 +49,37 @@
       </div>
       <form class="search_zone">
         <div class="loc_icon"><i class="fa-solid fa-location-dot"></i></div>
-        <input type="text" placeholder="Marseille, France" required>
+        <input type="text" placeholder="Marseille, France" required />
         <button id="desktop_button" type="submit">Rechercher</button>
-        <button id="mobile_button" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+        <button id="mobile_button" type="submit">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
       </form>
       <div class="filter_list">
         <h2 class="filter_title">Filtres</h2>
         <div class="filter">
           <div class="filter_box">
-            <div class="filter_icon"><i class="fa-solid fa-money-bill-wave"></i></div>
+            <div class="filter_icon">
+              <i class="fa-solid fa-money-bill-wave"></i>
+            </div>
             <span class="filter_name">Économique</span>
           </div>
           <div class="filter_box">
-            <div class="filter_icon"><i class="fa-solid fa-child-reaching filter_logo"></i></div>
+            <div class="filter_icon">
+              <i class="fa-solid fa-child-reaching filter_logo"></i>
+            </div>
             <span class="filter_name">Familial</span>
           </div>
           <div class="filter_box">
-            <div class="filter_icon"><i class="fa-solid fa-heart filter_logo"></i></div>
+            <div class="filter_icon">
+              <i class="fa-solid fa-heart filter_logo"></i>
+            </div>
             <span class="filter_name">Romantique</span>
           </div>
           <div class="filter_box">
-            <div class="filter_icon"><i class="fa-solid fa-dog filter_logo"></i></div>
+            <div class="filter_icon">
+              <i class="fa-solid fa-dog filter_logo"></i>
+            </div>
             <span class="filter_name">Animaux autorisés</span>
           </div>
         </div>
@@ -94,7 +102,7 @@
             <a href="#">
               <div class="lcard_img">
                 <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                  alt="Auberge La Cannebière">
+                  alt="Auberge La Cannebière" />
               </div>
               <div class="lcard_content">
                 <h3>Auberge La Cannebière</h3>
@@ -112,7 +120,7 @@
           <div class="lcard">
             <a href="#">
               <div class="lcard_img">
-                <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
+                <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" />
               </div>
               <div class="lcard_content">
                 <h3>Hôtel du port</h3>
@@ -130,7 +138,7 @@
           <div class="lcard">
             <a href="#">
               <div class="lcard_img">
-                <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
+                <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" />
               </div>
               <div class="lcard_content">
                 <h3>Hôtel Les mouettes</h3>
@@ -148,7 +156,7 @@
           <div class="lcard">
             <a href="#">
               <div class="lcard_img">
-                <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+                <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" />
               </div>
               <div class="lcard_content">
                 <h3>Hôtel de la mer</h3>
@@ -166,7 +174,7 @@
           <div class="lcard">
             <a href="#">
               <div class="lcard_img">
-                <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
+                <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" />
               </div>
               <div class="lcard_content">
                 <h3>Auberge Le Panier</h3>
@@ -185,7 +193,7 @@
             <a href="#">
               <div class="lcard_img">
                 <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
-                  alt="Hôtel chez Amina">
+                  alt="Hôtel chez Amina" />
               </div>
               <div class="lcard_content">
                 <h3>Hôtel chez Amina</h3>
@@ -218,7 +226,7 @@
             <a href="#">
               <div class="fcard_img">
                 <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
-                  alt="Hôtel Le soleil du matin">
+                  alt="Hôtel Le soleil du matin" />
               </div>
               <div class="fcard_content">
                 <div class="top_fcardcontent">
@@ -239,7 +247,7 @@
             <a href="#">
               <div class="fcard_img">
                 <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                  alt="Au cœur de l'eau Chambre d'hôtes">
+                  alt="Au cœur de l'eau Chambre d'hôtes" />
               </div>
               <div class="fcard_content">
                 <div class="top_fcardcontent">
@@ -260,7 +268,7 @@
             <a href="#">
               <div class="fcard_img">
                 <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                  alt="Hôtel Tout bleu et Blanc">
+                  alt="Hôtel Tout bleu et Blanc" />
               </div>
               <div class="fcard_content">
                 <div class="top_fcardcontent">
@@ -292,7 +300,7 @@
           <div class="big_card">
             <a href="#">
               <div class="bigacard_img">
-                <img src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
+                <img src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port" />
               </div>
               <div class="bigacard_content">
                 <h3>Vieux Port</h3>
@@ -304,7 +312,7 @@
           <div class="medium1_card">
             <a href="#">
               <div class="medium1_img">
-                <img src="./images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                <img src="./images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" />
               </div>
               <div class="medium1_content">
                 <h3>Fort de Pomègues</h3>
@@ -314,7 +322,7 @@
           <div class="small1_card">
             <a href="#">
               <div class="small1_img">
-                <img src="./images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
+                <img src="./images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul" />
               </div>
               <div class="small1_content">
                 <h3>Îles du Frioul</h3>
@@ -327,7 +335,7 @@
             <a href="#">
               <div class="bigacard_img">
                 <img src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-                  alt="Parc National des Calanques">
+                  alt="Parc National des Calanques" />
               </div>
               <div class="bigacard_content">
                 <h3>Parc National des Calanques</h3>
@@ -340,7 +348,7 @@
             <a href="#">
               <div class="small2_img">
                 <img src="./images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-                  alt="Notre-Dame-de-la-Garde">
+                  alt="Notre-Dame-de-la-Garde" />
               </div>
               <div class="small2_content">
                 <h3>Notre-Dame-de-la-Garde</h3>
@@ -350,7 +358,7 @@
           <div class="medium2_card">
             <a href="#">
               <div class="medium2_img">
-                <img src="./images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
+                <img src="./images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp" />
               </div>
               <div class="medium2_content">
                 <h3>Parc Longchamp</h3>
@@ -363,7 +371,6 @@
   </main>
 
   <footer class="footer_box">
-
     <!--* Code HTML du Footer -->
 
     <div class="footer_list">
