--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div class="info">
-        <div class="info_icon"><i class="fa-solid fa-info"></i></div>
+        <i class="fa-solid fa-info"></i>
         <p>Plus de 500 logements sont disponibles dans cette ville</p>
       </div>
     </section>
